Fix toast button focus outline contrast ratio
Fixes AB#1137

--- a/desktop/src/@batch-flask/ui/notifications/toast/toast.scss
+++ b/desktop/src/@batch-flask/ui/notifications/toast/toast.scss
@@ -41,6 +41,22 @@ bl-toast {
         background-color: $warn-color;
     }
 
+    &.success > .focus-outline.focus-visible {
+        outline-color: $success-contrast-color;
+    }
+
+    &.error > .focus-outline.focus-visible {
+        outline-color: $danger-contrast-color;
+    }
+
+    &.info > .focus-outline.focus-visible {
+        outline-color: $primary-contrast-color;
+    }
+
+    &.warn > .focus-outline.focus-visible {
+        outline-color: $warn-contrast-color;
+    }
+
     &.notification-hidden {
         opacity: 0;
     }
@@ -58,6 +74,7 @@ bl-toast {
 
     > .dismiss-btn {
         cursor: pointer;
+        padding: 2px;
         .fa-times {
             color: $primary-contrast-color;
         }
